--- a/.config/polybar/forest/config.ini
+++ b/.config/polybar/forest/config.ini
@@ -27,7 +27,7 @@ include-file = ~/.config/polybar/forest/bars.ini
 include-file = ~/.config/polybar/forest/colors.ini
 include-file = ~/.config/polybar/forest/modules.ini
 include-file = ~/.config/polybar/forest/user_modules.ini
-include-file = ~/Repos/ampp/ampp.ini
+#include-file = ~/Repos/ampp/ampp.ini
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
@@ -62,7 +62,7 @@ fixed-center = true
 ; the percentage can optionally be extended with a pixel offset like so:
 ; 50%:-10, this will result in a width or height of 50% minus 10 pixels
 width = 100%
-height = 40 
+height = 50 
 
 ; Offset defined as pixel value (e.g. 35) or percentage (e.g. 50%)
 ; the percentage can optionally be extended with a pixel offset like so:
@@ -131,10 +131,10 @@ module-margin-right = 1
 ;   font-3 = FontAwesome:size=10
 ; See the Fonts wiki page for more details
 
-font-0 = "Meslo LGS NF:size=12;4"
-font-1 = "Iosevka Nerd Font:size=12;3"
-font-2 = "feather:size=12;3"
-font-3 = "Nerd Font:size=12;3"
+font-0 = "Meslo LGS NF:size=10;4"
+font-1 = "Iosevka Nerd Font:size=10;3"
+font-2 = "feather:size=10;3"
+font-3 = "Nerd Font:size=10;3"
 
 ; Modules are added to one of the available blocks
 ;   modules-left = cpu ram
@@ -143,7 +143,7 @@ font-3 = "Nerd Font:size=12;3"
 
 modules-left =  workspaces sep updates filesystem 
 modules-center = ampp-left ampp-play ampp-right date 
-modules-right = battery network sep pulseaudio brightness sep 
+modules-right = battery network pulseaudio backlight 
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
@@ -210,7 +210,7 @@ tray-scale = 1.0
 
 ; Set a DPI values used when rendering text
 ; This only affects scalable fonts
-; dpi = 
+dpi = 144
 
 ; Enable support for inter-process messaging
 ; See the Messaging wiki page for more details.
