--- a/.config/polybar/forest/colors.ini
+++ b/.config/polybar/forest/colors.ini
@@ -12,8 +12,8 @@
 ;; Use pywal.sh in scripts directory to use colors from an image/wallpaper.
 
 ;; main colors
-background = #98282828
-foreground = #98EBDBB2
+background = #282828
+foreground = #EBDBB2
 sep = #505050
 
 white = #FFFFFF
