--- a/.config/polybar/forest/modules.ini
+++ b/.config/polybar/forest/modules.ini
@@ -864,7 +864,8 @@ use-ui-max = false
 
 ; Interval for volume increase/decrease (in percent points)
 ; Default: 5
-interval = 5
+; interval = 5
+interval = 1.0
 
 ; Available tags:
 ;   <label-volume> (default)
@@ -1034,10 +1035,10 @@ enable-scroll = true
 ; You can get a list of the defined desktops using:
 ; $ xprop -root _NET_DESKTOP_NAMES
 icon-0 = I;
-icon-1 = II;
-icon-2 = III;
-icon-3 = IV;
-icon-4 = V;
+icon-1 = II;
+icon-2 = III;
+icon-3 = IV;
+icon-4 = V;
 
 ; Available tags:
 ;   <label-monitor>
