--- a/.config/polybar/forest/user_modules.ini
+++ b/.config/polybar/forest/user_modules.ini
@@ -242,3 +242,15 @@ label-close-padding = 1
 ;label-separator = " | "
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
+;
+;
+;
+;
+[module/pipewire]
+type = custom/script
+exec = ~/.config/polybar/polybar-scripts/pipewire-simple.sh
+interval = 1
+click-right = exec pavucontrol &
+click-left = ~/.config/polybar/polybar-scripts/pipewire-simple.sh --mute &
+scroll-up = ~/.config/polybar/polybar-scripts/pipewire-simple.sh --up &
+scroll-down = ~/.config/polybar/polybar-scripts/pipewire-simple.sh --down &
