bspwmrc and picom

--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -117,7 +117,7 @@ shadow-exclude = [
 
 # Fade windows in/out when opening/closing and when opacity changes,
 #  unless no-fading-openclose is used.
-fading = false;
+fading = true;
 # fading = true;
 
 # Opacity change between steps while fading in. (0.01 - 1.0, defaults to 0.028)
@@ -181,7 +181,7 @@ inactive-dim-fixed = 1;
 # Note we don't make any guarantee about possible conflicts with other 
 # programs that set '_NET_WM_WINDOW_OPACITY' on frame or client windows.
 # example:
-#    opacity-rule = [ "80:class_g = 'URxvt'" ];
+ opacity-rule = [ "100:class_g = 'firefox'", "100:class_g = 'Polybar'" ];
 #
 # opacity-rule = []
 
@@ -238,7 +238,8 @@ blur-background-exclude = [
     #"window_type = 'dock'",
     #"window_type = 'desktop'",
     #"class_g = 'URxvt'",
-    #"class_g = 'Chromium'",
+    "class_g = 'firefox'",
+    "class_g = 'polybar'",
     #
     # prevents picom from blurring the background
     # when taking selection screenshot with `main`
@@ -465,7 +466,6 @@ wintypes:
 {
     normal = { fade = false; shadow = false;}
     #normal = { fade = false; full-shadow = true;}
-    tooltip = { fade = true; shadow = true; opacity = 0.75; focus = true; full-shadow = false; }
     #tooltip = { fade = true; opacity = 0.75; focus = true; shadow = true; full-shadow = true; }
     dock = { shadow = false; }
     dnd = { shadow = false; }
