--- a/.config/polybar/forest/config.ini
+++ b/.config/polybar/forest/config.ini
@@ -141,9 +141,9 @@ font-3 = "Nerd Font:size=10;3"
 ;   modules-center = xwindow xbacklight
 ;   modules-right = ipc clock
 
-modules-left =  workspaces sep updates filesystem 
-modules-center = ampp-left ampp-play ampp-right date 
-modules-right = battery network pulseaudio backlight 
+modules-left =  workspaces 
+modules-center = title 
+modules-right = battery network date
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
