--- a/.config/polybar/forest/colors.ini
+++ b/.config/polybar/forest/colors.ini
@@ -12,26 +12,25 @@
 ;; Use pywal.sh in scripts directory to use colors from an image/wallpaper.
 
 ;; main colors
-background = #282828
+background = #1d2021
 foreground = #EBDBB2
 sep = #505050
 
 white = #FFFFFF
 black = #000000
-red = #EC7875
+red = #cc241d
 pink = #EC407A
-purple = #BA68C8
-blue = #42A5F5
-cyan = #4DD0E1
-teal = #00B19F
-green = #61C766
-lime = #B9C244
-yellow = #FDD835
-amber = #FBC02D
-orange = #E57C46
-brown = #AC8476
-indigo = #6C77BB
-gray = #9E9E9E
-blue-gray = #6D8895
+purple = #d3869b
+blue = #458588
+cyan = #458588
+teal = #689d6a
+green = #98971a
+lime = #b8bb26
+yellow = #fabd2f
+amber = #d79921
+orange = #fe8019
+brown = #32302f
+indigo = #d3869b
+gray = #928374
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
