--- a/.config/polybar/forest/modules.ini
+++ b/.config/polybar/forest/modules.ini
@@ -149,7 +149,7 @@ time-format = %H:%M
 ;   <animation-charging>
 format-charging = <label-charging>
 format-charging-prefix = ""
-format-charging-prefix-foreground = ${color.green}
+format-charging-prefix-foreground = ${color.lime}
 
 ; Available tags:
 ;   <label-discharging> (default)
@@ -158,7 +158,7 @@ format-charging-prefix-foreground = ${color.green}
 ;   <animation-discharging>
 format-discharging = <label-discharging>
 format-discharging-prefix = ""
-format-discharging-prefix-foreground = ${color.pink}
+format-discharging-prefix-foreground = ${color.lime}
 
 ; Available tags:
 ;   <label-full> (default)
@@ -166,7 +166,7 @@ format-discharging-prefix-foreground = ${color.pink}
 ;   <ramp-capacity>
 format-full = <label-full>
 format-full-prefix = 
-format-full-prefix-foreground = ${color.red}
+format-full-prefix-foreground = ${color.lime}
 
 ; Available tokens:
 ;   %percentage% (default)
@@ -378,24 +378,22 @@ interval = 1.0
 date = %A, %d %B
 
 ; Optional time format
-time = at %I:%M %p
+time = %I:%M %p
 
 ; if `date-alt` or `time-alt` is defined, clicking
 ; the module will toggle between formats
-date-alt = It's %A, %d %B %Y
-time-alt = at %k:%M:%S
 
 ; Available tags:
 ;   <label> (default)
 format = <label>
 format-prefix = " "
-format-prefix-foreground = ${color.red}
+format-prefix-foreground = ${color.cyan}
 
 ; Available tokens:
 ;   %date%
 ;   %time%
 ; Default: %date%
-label = %date% %time%
+label =  %time%
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
@@ -792,7 +790,7 @@ unknown-as-up = true
 ;   <ramp-signal>
 format-connected = <label-connected>
 format-connected-prefix = 
-format-connected-prefix-foreground = ${color.purple}
+format-connected-prefix-foreground = ${color.yellow}
 
 ; Available tags:
 ;   <label-disconnected> (default)
@@ -997,8 +995,6 @@ type = internal/xwindow
 ; Available tags:
 ;   <label> (default)
 format = <label>
-format-prefix = 
-format-foreground = ${color.foreground}
 
 ; Available tokens:
 ;   %title%
@@ -1007,7 +1003,7 @@ label = " %title%"
 label-maxlen = 30
 
 ; Used instead of label when there is no window title
-label-empty = " Desktop"
+label-empty = "Desktop"
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
@@ -1057,7 +1053,7 @@ label-monitor = %name%
 ;   %index%
 ; Default: %icon%  %name%
 label-active = %icon%
-label-active-foreground = ${color.pink}
+label-active-foreground = ${color.purple}
 
 ; Available tokens:
 ;   %name%
