--- a/.config/polybar/modules.ini
+++ b/.config/polybar/modules.ini
@@ -123,8 +123,8 @@ full-at = 99
 
 ; Use the following command to list batteries and adapters:
 ; $ ls -1 /sys/class/power_supply/
-battery = BAT0 
-adapter = AC 
+battery = macsmc-battery
+adapter =  macsmc-ac
 
 ; If an inotify event haven't been reported in this many
 ; seconds, manually poll for new values.
@@ -755,10 +755,54 @@ interface = eth0
 type = internal/network
 interface = wlp2s0
 
+[module/vpn]
+type = internal/network
+interface = wg0 
+; Seconds to sleep between updates
+; Default: 1
+interval = 1.0
+
+unknown-as-up = true
+; Available tags:
+;   <label-connected> (default)
+;   <ramp-signal>
+format-connected = <label-connected>
+format-connected-prefix = 
+format-connected-prefix-foreground = ${color.yellow}
+
+; Available tags:
+;   <label-disconnected> (default)
+format-disconnected = <label-disconnected>
+format-disconnected-prefix = 
+format-disconnected-prefix-foreground = ${color.orange}
+
+; Available tags:
+;   <label-connected> (default)
+;   <label-packetloss>
+;   <animation-packetloss>
+;;format-packetloss = <animation-packetloss> <label-connected>
+
+; Available tokens:
+;   %ifname%    [wireless+wired]
+;   %local_ip%  [wireless+wired]
+;   %local_ip6% [wireless+wired]
+;   %essid%     [wireless]
+;   %signal%    [wireless]
+;   %upspeed%   [wireless+wired]
+;   %downspeed% [wireless+wired]
+;   %linkspeed% [wired]
+; Default: %ifname% %local_ip%
+label-connected = "%{A1:networkmanager_dmenu &:} %essid% %{F#6C77BB}"
+
+; Available tokens:
+;   %ifname%    [wireless+wired]
+; Default: (none)
+label-disconnected = "%{A1:networkmanager_dmenu &:} Disconnected %{A}"
+
 ; Normal Module
 [module/network]
 type = internal/network
-interface = wlp2s0 
+interface = wlan0 
 
 ; Seconds to sleep between updates
 ; Default: 1
