Polybar path changes, dpi, sxhkd changes

--- a/.config/polybar/modules.ini
+++ b/.config/polybar/modules.ini
@@ -378,7 +378,7 @@ interval = 1.0
 date = %A, %d %B
 
 ; Optional time format
-time = %I:%M %p
+time =  %d %b, %I:%M %p
 
 ; if `date-alt` or `time-alt` is defined, clicking
 ; the module will toggle between formats
@@ -749,7 +749,7 @@ toggle-off-foreground = ${color.red}
 ; If you use both a wired and a wireless network, just add 2 module definitions. For example
 [module/wired-network]
 type = internal/network
-interface = eth0
+interface = enp6s0 
 
 [module/wireless-network]
 type = internal/network
