--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -23,10 +23,10 @@ margin-top = 0
 ;; File Inclusion
 ; include an external file, like module file, etc.
 
-include-file = ~/.config/polybar/forest/bars.ini
-include-file = ~/.config/polybar/forest/colors.ini
-include-file = ~/.config/polybar/forest/modules.ini
-include-file = ~/.config/polybar/forest/user_modules.ini
+include-file = ~/.config/polybar/bars.ini
+include-file = ~/.config/polybar/colors.ini
+include-file = ~/.config/polybar/modules.ini
+include-file = ~/.config/polybar/user_modules.ini
 #include-file = ~/Repos/ampp/ampp.ini
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
@@ -62,7 +62,7 @@ fixed-center = true
 ; the percentage can optionally be extended with a pixel offset like so:
 ; 50%:-10, this will result in a width or height of 50% minus 10 pixels
 width = 100%
-height = 50 
+height = 50
 
 ; Offset defined as pixel value (e.g. 35) or percentage (e.g. 50%)
 ; the percentage can optionally be extended with a pixel offset like so:
@@ -87,7 +87,7 @@ foreground = ${color.foreground}
 ; Individual top/bottom values can be defined using:
 ;   radius-{top,bottom}
 radius-top = 0.0
-radius-bottom = 8.0
+radius-bottom = 0.0
 
 ; Under-/overline pixel size and argb color
 ; Individual values can be defined using:
@@ -143,7 +143,7 @@ font-3 = "Nerd Font:size=10;3"
 
 modules-left =  workspaces 
 modules-center = title 
-modules-right = battery network date  
+modules-right = network pulseaudio date  
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
