dunsts, polybar, picom

--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -2,7 +2,7 @@
 #             Corners           #
 #################################
 # requires: https://github.com/sdhand/compton
-corner-radius = 15.0;
+corner-radius = 10.0;
 rounded-corners-exclude = [
     "window_type = 'tooltip'",
     "window_type = 'popup_menu'",
@@ -49,11 +49,11 @@ shadow-radius = 0;
 
 # The left offset for shadows, in pixels. (defaults to -15)
 # shadow-offset-x = -15
-shadow-offset-x = -7;
+shadow-offset-x = 0;
 
 # The top offset for shadows, in pixels. (defaults to -15)
 # shadow-offset-y = -15
-shadow-offset-y = -7;
+shadow-offset-y = 0;
 
 # Avoid drawing shadows on dock/panel windows. This option is deprecated,
 # you should use the *wintypes* option in your config file instead.
@@ -181,7 +181,7 @@ inactive-dim-fixed = 1;
 # Note we don't make any guarantee about possible conflicts with other 
 # programs that set '_NET_WM_WINDOW_OPACITY' on frame or client windows.
 # example:
- opacity-rule = [ "100:class_g = 'firefox'", "100:class_g = 'Polybar'" ];
+ opacity-rule = [ "100:class_g = 'firefox'", "80:class_g = 'Polybar'", "100:class_g = 'steam'", "100:class_g = 'wine'",  ];
 #
 # opacity-rule = []
 
