--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -62,7 +62,7 @@ fixed-center = true
 ; the percentage can optionally be extended with a pixel offset like so:
 ; 50%:-10, this will result in a width or height of 50% minus 10 pixels
 width = 100%
-height = 50
+height = 30
 
 ; Offset defined as pixel value (e.g. 35) or percentage (e.g. 50%)
 ; the percentage can optionally be extended with a pixel offset like so:
@@ -131,7 +131,7 @@ module-margin-right = 1
 ;   font-3 = FontAwesome:size=10
 ; See the Fonts wiki page for more details
 
-font-0 = "Meslo LGS NF:size=10;4"
+font-0 = "MesloLGS NF:size=10;3"
 font-1 = "Iosevka Nerd Font:size=10;3"
 font-2 = "feather:size=10;3"
 font-3 = "Nerd Font:size=10;3"
@@ -143,7 +143,7 @@ font-3 = "Nerd Font:size=10;3"
 
 modules-left =  workspaces 
 modules-center = title 
-modules-right = network pulseaudio date  
+modules-right = memory pulseaudio date  
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
@@ -210,7 +210,7 @@ tray-scale = 1.0
 
 ; Set a DPI values used when rendering text
 ; This only affects scalable fonts
-dpi = 144
+dpi = 96 
 
 ; Enable support for inter-process messaging
 ; See the Messaging wiki page for more details.
