--- a/.config/polybar/modules.ini
+++ b/.config/polybar/modules.ini
@@ -802,7 +802,7 @@ label-disconnected = "%{A1:networkmanager_dmenu &:} Disconnected %{A}"
 ; Normal Module
 [module/network]
 type = internal/network
-interface = wlan0 
+interface = enp6s0 
 
 ; Seconds to sleep between updates
 ; Default: 1
@@ -858,7 +858,7 @@ format-disconnected-prefix-foreground = ${color.orange}
 ;   %downspeed% [wireless+wired]
 ;   %linkspeed% [wired]
 ; Default: %ifname% %local_ip%
-label-connected = "%{A1:networkmanager_dmenu &:} %essid% %{F#6C77BB}"
+label-connected = "%{A1:networkmanager_dmenu &:} %ifname% %{F#6C77BB}"
 
 ; Available tokens:
 ;   %ifname%    [wireless+wired]
@@ -1076,9 +1076,10 @@ enable-scroll = true
 ; $ xprop -root _NET_DESKTOP_NAMES
 icon-0 = I;
 icon-1 = II;
-icon-2 = III;
+icon-2 = III;
 icon-3 = IV;
-icon-4 = V;
+icon-4 = V;
+;
 
 ; Available tags:
 ;   <label-monitor>
