--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -143,7 +143,7 @@ font-3 = "Nerd Font:size=10;3"
 
 modules-left =  workspaces 
 modules-center = title 
-modules-right = network pulseaudio date  
+modules-right = battery network pulseaudio date  
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
