--- a/.config/polybar/modules.ini
+++ b/.config/polybar/modules.ini
@@ -1076,9 +1076,10 @@ enable-scroll = true
 ; $ xprop -root _NET_DESKTOP_NAMES
 icon-0 = I;
 icon-1 = II;
-icon-2 = III;
+icon-2 = III;
 icon-3 = IV;
-icon-4 = V;
+icon-4 = V;
+;
 
 ; Available tags:
 ;   <label-monitor>
