hyprland config update

--- a/.config/hypr/hyprlandd.conf
+++ b/.config/hypr/hyprlandd.conf
@@ -14,8 +14,9 @@ monitor=,preferred,auto,1
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
 # Execute your favorite apps at launch
-exec-once = swaybg -i /home/aaditya/.wallpapers/Erdtree.png 
+exec-once = swaybg -i /home/aaditya/.wallpapers/sekiro.jpg
 exec-once = waybar -c /home/aaditya/.config/waybar/config 
+exec-once = dunst &
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
 
@@ -27,10 +28,10 @@ input {
     kb_options =
     kb_rules =
 
-    follow_mouse = 0
+    follow_mouse = 2
 
     touchpad {
-        natural_scroll = no
+        natural_scroll = yes
     }
 
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
@@ -94,7 +95,7 @@ master {
 
 gestures {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
-    workspace_swipe = off
+    workspace_swipe = on 
 }
 
 # Example per-device config
@@ -121,7 +122,7 @@ bind = $mainMod, V, togglefloating,
 bind = $mainMod, F, fullscreen, 
 bind = $mainMod, C, cyclenext, 
 bind = SUPER_SHIFT, C, cyclenext, prev 
-bind = $mainMod, Space, exec, /home/aaditya/.config/polybar/scripts/launcher.sh 
+bind = $mainMod, Space, exec, /home/aaditya/.config/polybar/scripts/launcher.sh &
 bind = $mainMod, A, bringactivetotop, 
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, E, togglesplit, # dwindle
@@ -178,4 +179,15 @@ bind = ,XF86MonBrightnessUp, exec, brightnessctl set +10%
 bind = ,XF86MonBrightnessDown, exec, brightnessctl set 10-%
 
 
+#Resizing
+
+bind = $mainMod ALT, H, resizeactive, -50 0
+bind = $mainMod ALT, J, resizeactive, 0 50
+bind = $mainMod ALT, K, resizeactive, 0 -50
+bind = $mainMod ALT, L, resizeactive,  50 0
+
+
+#Screenshots
+
+bind = $mainMod SHIFT, S, exec, grim ~/Seafile/Files/Screenshots/$(date +%s).png
 
