--- a/src/packages/tasks/main.yaml
+++ b/src/packages/tasks/main.yaml
@@ -1,15 +1,11 @@
-- name: Wayland Setup
-  hosts: all 
-  remote_user: root
-  connection: local
-  vars:
-    packages: "{{ lookup('file', './packages.yaml') | from_yaml }}"
-  tasks:
-    - name: Package Management
-      ansible.builtin.debug:
-        msg: Using packages.yaml as source
-    - name: Installing Packages
-      ansible.builtin.dnf:
-        name: "{{ packages.groups.development }}"
-        state: latest
+- name: Installing DNF Packages
+  ansible.builtin.dnf:
+    name: "{{ packages[item].dnf }}"
+    state: latest
+  loop: "{{ config.packages }}"
 
+- name: Installing Flatpaks
+  community.general.flatpak:
+    name: "{{ packages[item].flatpak }}"
+    state: present 
+  loop: "{{ config.packages }}"
