Add role inclusion for config
The config role is now called in the main playbook

--- a/install.yaml
+++ b/install.yaml
@@ -10,3 +10,6 @@
     - name: Package Management 
       include_role:
         name: "src/packages"
+    - name: Configs Setup
+      include_role:
+        name: "src/config"
