Update install.yaml and config.yaml with system role config
New flags are added in config.yaml to manage the system level
configuration

--- a/config.yaml
+++ b/config.yaml
@@ -4,9 +4,13 @@ packages:
   - development
   - gaming
 system:
+  wireguard:
+    wg_path: /etc/wireguard/wg0.conf
+  install_wireguard: true 
+  install_systemd: true
 opt:
 config:
   install_shell: true
-  install_wayland: true
+  install_wayland: false
   install_xorg: false
   install_misc: false
