--- a/src/config/tasks/main.yaml
+++ b/src/config/tasks/main.yaml
@@ -4,10 +4,30 @@
       ansible.builtin.dnf:
         name: "zsh"
         state: latest
+
     - name: Setup oh-my-zsh
       become: true
       become_user: aaditya
       ansible.builtin.shell: 'sh -c "$(curl -fsSL https://raw.githubusercontent.com/ohmyzsh/ohmyzsh/master/tools/install.sh)" "" --unattended'
+      ignore_errors: true
+
+    - name: Setup zsh-autosuggestions
+      become: true
+      become_user: aaditya
+      ansible.builtin.shell: 'git clone https://github.com/zsh-users/zsh-autosuggestions ${ZSH_CUSTOM:-~/.oh-my-zsh/custom}/plugins/zsh-autosuggestions'
+      ignore_errors: true
+
+    - name: Setup zsh-syntax-highlighting
+      become: true
+      become_user: aaditya
+      ansible.builtin.shell: 'git clone https://github.com/zsh-users/zsh-syntax-highlighting.git ${ZSH_CUSTOM:-~/.oh-my-zsh/custom}/plugins/zsh-syntax-highlighting'
+      ignore_errors: true
+
+    - name: Setup powerlevel10k
+      become: true
+      become_user: aaditya
+      ansible.builtin.shell: 'git clone --depth=1 https://github.com/romkatv/powerlevel10k.git ${ZSH_CUSTOM:-$HOME/.oh-my-zsh/custom}/themes/powerlevel10k'
+      ignore_errors: true
 
     - name: Setup p10k, tmux and zshrc
       ansible.builtin.copy:
