--- a/src/config/files/alacritty/alacritty.yml
+++ b/src/config/files/alacritty/alacritty.yml
@@ -156,7 +156,7 @@ font:
     style: Bold Italic
 
   # Point size
-  size: 8.0
+  size: 14.0
 
   # Offset is the extra space around each character. `offset.y` can be thought
   # of as modifying the line spacing, and `offset.x` as modifying the letter
@@ -745,7 +745,10 @@ colors:
 #
 # If the same trigger is assigned to multiple actions, all of them are executed
 # in the order they were defined in.
-#key_bindings:
+key_bindings:
+  - { key: N, mods: Control, action: CreateNewWindow }
+  - { key: N, mods: Control | Shift, action: SpawnNewInstance }
+  - { key: W, mods: Super,  action: Quit }
   #- { key: Paste,                                       action: Paste          }
   #- { key: Copy,                                        action: Copy           }
   #- { key: L,         mods: Control,                    action: ClearLogNotice }
