--- a/src/config/files/shell/.tmux.conf
+++ b/src/config/files/shell/.tmux.conf
@@ -11,16 +11,16 @@ set-option -g display-panes-active-colour red
 set-option -g display-panes-colour blue
 set-option -g display-panes-time 1000
 set-option -g display-time 750
-set-option -g history-limit 2000
+set-option -g history-limit 4000
 set-option -g key-table root
 set-option -g lock-after-time 0
 set-option -g lock-command "lock -np"
 set-option -g message-command-style bg=black,fg=yellow
 set-option -g message-style bg=yellow,fg=black
-set-option -g mouse off
+set-option -g mouse on
 set-option -g prefix C-a
 set-option -g prefix2 None
-set-option -g renumber-windows off
+set-option -g renumber-windows on
 set-option -g repeat-time 1000
 set-option -g set-titles off
 set-option -g set-titles-string "#S:#I:#W - \"#T\" #{session_alerts}"
@@ -53,3 +53,8 @@ set-option -g visual-activity off
 set-option -g visual-bell off
 set-option -g visual-silence off
 set-option -g word-separators "!\"#$%&'()*+,-./:;<=>?@[\\]^`{|}~"
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @resurrect-strategy-vim 'session'
+set -g @resurrect-strategy-nvim 'session'
+run '~/.tmux/plugins/tpm/tpm'
+
