--- a/src/config/tasks/main.yaml
+++ b/src/config/tasks/main.yaml
@@ -7,31 +7,31 @@
 
     - name: Setup oh-my-zsh
       become: true
-      become_user: {{ config.username }}
+      become_user: "{{ config.username }}"
       ansible.builtin.shell: 'sh -c "$(curl -fsSL https://raw.githubusercontent.com/ohmyzsh/ohmyzsh/master/tools/install.sh)" "" --unattended'
       ignore_errors: true
 
     - name: Setup zsh-autosuggestions
       become: true
-      become_user: {{ config.username }}
+      become_user: "{{ config.username }}"
       ansible.builtin.shell: 'git clone https://github.com/zsh-users/zsh-autosuggestions ${ZSH_CUSTOM:-~/.oh-my-zsh/custom}/plugins/zsh-autosuggestions'
       ignore_errors: true
 
     - name: Setup zsh-syntax-highlighting
       become: true
-      become_user: {{ config.username }}
+      become_user: "{{ config.username }}"
       ansible.builtin.shell: 'git clone https://github.com/zsh-users/zsh-syntax-highlighting.git ${ZSH_CUSTOM:-~/.oh-my-zsh/custom}/plugins/zsh-syntax-highlighting'
       ignore_errors: true
 
     - name: Setup powerlevel10k
       become: true
-      become_user: {{ config.username }}
+      become_user: "{{ config.username }}"
       ansible.builtin.shell: 'git clone --depth=1 https://github.com/romkatv/powerlevel10k.git ${ZSH_CUSTOM:-$HOME/.oh-my-zsh/custom}/themes/powerlevel10k'
       ignore_errors: true
 
     - name: Setup p10k, tmux and zshrc
       become: true
-      become_user: {{ config.username }}
+      become_user: "{{ config.username }}"
       ansible.builtin.copy:
         src: shell/{{ item }}
         dest: "/home/{{ config.username }}"
@@ -43,7 +43,7 @@
 
     - name: Setup vimrc and vim bundles
       become: true
-      become_user: {{ config.username }}
+      become_user: "{{ config.username }}"
       ansible.builtin.copy:
         src: shell/{{ item }}
         dest: "/home/{{ config.username }}"
@@ -53,13 +53,13 @@
 
     - name: Setup vundle
       become: true
-      become_user: {{ config.username }}
+      become_user: "{{ config.username }}"
       ansible.builtin.shell: 'git clone https://github.com/VundleVim/Vundle.vim.git ~/.vim/bundle/Vundle.vim && vim +PluginInstall +qall'
       ignore_errors: true
 
     - name: Install autoload in right directory
       become: true
-      become_user: {{ config.username }}
+      become_user: "{{ config.username }}"
       ansible.builtin.copy:
         src: "/home/{{ config.username }}/.vim/bundle/gruvbox-material/autoload/gruvbox_material.vim"
         dest: "/home/{{ config.username }}/.vim/autoload/"
@@ -67,7 +67,7 @@
 
     - name: Install colors in right directory
       become: true
-      become_user: {{ config.username }}
+      become_user: "{{ config.username }}"
       ansible.builtin.copy:
         src: "/home/{{ config.username }}/.vim/bundle/gruvbox-material/colors/gruvbox-material.vim"
         dest: "/home/{{ config.username }}/.vim/colors/"
@@ -75,7 +75,7 @@
 
     - name: Setup vim/neovim directories
       become: true
-      become_user: {{ config.username }}
+      become_user: "{{ config.username }}"
       ansible.builtin.copy:
         src: "{{ item }}"
         dest: "/home/{{ config.username }}/.config"
@@ -87,7 +87,7 @@
 
 - name: Install Dotfiles (Wayland)
   become: true
-  become_user: {{ config.username }}
+  become_user: "{{ config.username }}"
   ansible.builtin.copy:
     src: "{{ item }}"
     dest: "/home/{{ config.username }}/.config/"
@@ -97,7 +97,7 @@
 
 - name: Install Dotfiles (Xorg)
   become: true
-  become_user: {{ config.username }}
+  become_user: "{{ config.username }}"
   ansible.builtin.copy:
     src: "{{ item }}"
     dest: "/home/{{ config.username }}/.config/"
@@ -107,7 +107,7 @@
 
 - name: Install Dotfiles (All)
   become: true
-  become_user: {{ config.username }}
+  become_user: "{{ config.username }}"
   ansible.builtin.copy:
     src: "{{ item }}"
     dest: "/home/{{ config.username }}/.config/"
