--- a/src/packages/tasks/main.yaml
+++ b/src/packages/tasks/main.yaml
@@ -1,9 +1,25 @@
+- name: Setup Repositories
+  block:
+  - name: Setup Free RPM Repository
+    ansible.builtin.shell: 'dnf install -y https://download1.rpmfusion.org/free/fedora/rpmfusion-free-release-$(rpm -E %fedora).noarch.rpm'
+  - name: Setup Non-Free RPM Repository
+    ansible.builtin.shell: 'dnf install -y   https://download1.rpmfusion.org/nonfree/fedora/rpmfusion-nonfree-release-$(rpm -E %fedora).noarch.rpm'
+  - name: Setup K8S Repository
+    ansible.builtin.copy:
+      src: kubernetes.repo
+      dest: /etc/yum.repos.d/kubernetes.repo
+      owner: root
+      group: root
+      mode: '0644'
+
 - name: Installing DNF Packages
   ansible.builtin.dnf:
     name: "{{ packages[item].dnf }}"
     state: latest
   loop: "{{ config.packages }}"
 
+- name: Setup Flathub
+  ansible.builtin.shell: 'flatpak remote-add --if-not-exists flathub https://dl.flathub.org/repo/flathub.flatpakrepo'
 - name: Installing Flatpaks
   community.general.flatpak:
     name: "{{ packages[item].flatpak }}"
