Update system, packages and playbooks, add vault

--- a/config.yaml
+++ b/config.yaml
@@ -1,16 +1,3 @@
 ---
 username: aaditya
-packages:
-  - development
-  - gaming
-system:
-  wireguard:
-    wg_path: /etc/wireguard/wg0.conf
-  install_wireguard: true 
-  install_systemd: true
-opt:
-config:
-  install_shell: true
-  install_wayland: false
-  install_xorg: false
-  install_misc: false
+packages: []
