Update documentation, small fixes to variable namespacing

--- a/src/packages/defaults/main.yaml
+++ b/src/packages/defaults/main.yaml
@@ -104,7 +104,7 @@ packages:
       - playerctl
       - vlc
       - yt-dlp
-      - yt-dlp-zsh-completion
+      - yt-dlp-bash-completion
       # Mail
       - abook
       - isync
