--- a/src/config/files/tmux/.tmux.conf
+++ b/src/config/files/tmux/.tmux.conf
@@ -3,6 +3,7 @@ set-option -g history-limit 50000
 set-option -g mouse on
 set-option -g prefix C-a
 set-option -g status-keys vi
+set-option -g renumber-windows on
 
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @resurrect-strategy-vim 'session'
