Maintain directory in tmux splits

--- a/src/config/files/tmux/.tmux.conf
+++ b/src/config/files/tmux/.tmux.conf
@@ -4,6 +4,8 @@ set-option -g mouse on
 set-option -g prefix C-a
 set-option -g status-keys vi
 set-option -g renumber-windows on
+bind '"' split-window -c "#{pane_current_path}"
+bind % split-window -h -c "#{pane_current_path}"
 
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @resurrect-strategy-vim 'session'
