Minor bugfixes in mail and vimrc
- Fix vimrc install path
- Update mutt_generate_attachment_commands script and mailcap file for
  pdf

--- a/src/config/tasks/main.yaml
+++ b/src/config/tasks/main.yaml
@@ -48,7 +48,7 @@
       become_user: "{{ username }}"
       ansible.builtin.copy:
         src: neovim/vimrc
-        dest: "/home/{{ username }}"
+        dest: "/home/{{ username }}/.vimrc"
         backup: yes
 
     - name: Setup init.vim
