Minor patches to config files, updates to repofile

--- a/src/config/files/starship/starship.toml
+++ b/src/config/files/starship/starship.toml
@@ -29,3 +29,11 @@ disabled = true
 
 [cmake]
 disabled = true
+
+[username]
+disabled = true
+[hostname]
+disabled = true
+
+[dotnet]
+disabled = true
