--- a/src/config/files/alacritty/alacritty.toml
+++ b/src/config/files/alacritty/alacritty.toml
@@ -25,7 +25,7 @@ size = 12.0
 [[keyboard.bindings]]
 action = "CreateNewWindow"
 key = "N"
-mods = "Control"
+mods = "Super"
 
 [[keyboard.bindings]]
 action = "Quit"
